--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
     "@types/node": "22.10.5",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
+    "canvas": "^3.0.1",
     "clsx": "^2.1.1",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
     "framer-motion": "^11.16.0",
     "next": "15.1.3",
+    "pdfjs-dist": "^3.11.174",
     "postcss": "8.4.49",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.0",
+    "react-pdf": "^9.2.1",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.2"
   }
