--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.32",
+    "@react-email/render": "^1.0.4",
+    "@react-email/tailwind": "^1.0.4",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/zoom": "^3.12.0",
@@ -21,14 +24,16 @@
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
     "framer-motion": "^11.16.0",
-    "next": "15.1.3",
+    "next": "^15.1.5",
     "pdfjs-dist": "^3.11.174",
     "postcss": "8.4.49",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.0",
     "react-pdf": "^9.2.1",
+    "resend": "^4.1.1",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.2"
   }
